--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # --- EXCEPTIONS ---
 # But DO include these specific project folders and files
 !_templater_scripts/
-!templates/
+!_templates/
 !README.md
 !.gitignore
+# Ignore macOS system files
+**/.DS_Store
